adding in examples of ancillary data

--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,11 @@ to load and display a page, data not needed to accomplish the user's intent on a
 This category of data is called <dfn data-lt="ancillary data">ancillary data</dfn>,
 and these uses are <dfn data-lt="ancillary use">ancillary uses</dfn> of data.
 
+<aside class="example">
+  Some examples of ancillary data include browser telemetry, site telemetry,
+  performance measurements, and software updates.
+</aside>
+
 Different users will want to share different kinds and amounts of ancillary data
 with websites, including possibly no ancillary data.
 In some case, users might reasonably anticipate some data being collected
