More like a sentence

--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ often need to approximate the boundaries between [=contexts=] when building
 [=partitions=]. In the absence of better information, a [=partition=] can be
 defined as:
 
-* A set of [=environments=] (roughly same-site and cross-site [^iframe^]s,
+* a set of [=environments=] (roughly same-site and cross-site [^iframe^]s,
 workers, and top-level pages)
 * whose [=environment/top-level origins=] are in the [=same site=] (but see
 [[PSL-Problems]])
