--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@ privacy</a>).
   Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
   the number of actors that have access to personal data about many individual people. Encryption and
   privacy-preserving proxies may minimize the number of actors that have access to personal data or
-  to hide the contents of personal data. But even
+  hide the contents of personal data. But even
   with those protections, some people may prefer not to participate in some kinds of measurement.
 
   Ongoing work on privacy-preserving technologies in the <abbr title="Internet Engineering Task
