trying to fix the telemetry and anyltics issue

--- a/index.html
+++ b/index.html
@@ -1288,11 +1288,11 @@ communicate common user preferences (such as a [=global opt-out=]).
 
 <div class="practice">
   <span class="practicelab">Specifications that define functionality for telemetry and analytics
-  should explicitly note the [=telemetry and analytics|analytics=] use to facilitate modal or general user
+  should explicitly note the telemetry and analytics use to facilitate modal or general user
   choices.</span>
 </div>
 
-Data exposed for [=ancillary uses=] including [=telemetry and analytics|telemetry=] may
+Data exposed for [=ancillary uses=] including telemetry and analytics may
 often reveal characteristics of user configuration, device, environment, or behavior that could be
 used as part of <a>browser fingerprinting</a> to identify users across sites. Revealing user
 preferences or other heuristics in providing or disabling functionality could also contribute to a
