clarify text around examples of ancillary data and ancillary purposes
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@ goals. These uses are known as <dfn data-lt="ancillary use">ancillary uses</dfn>
 and data that is primarily useful for [=ancillary uses=] is <dfn>ancillary data</dfn>.
 
 <aside class="example">
-  Some examples of ancillary data include browser telemetry, site telemetry,
+  Some examples of ancillary data include data used for browser telemetry, site telemetry,
   performance measurements, and software updates.
 </aside>
 
