--- a/index.html
+++ b/index.html
@@ -1236,9 +1236,11 @@ Note that this principle was further explored in an earlier TAG draft on [[[Data
 </aside>
 
 <div class="practice">
-<span class="practicelab">In maintaining duties of [=duty of protection|protection=], [=duty of discretion|discretion=] and [=duty of loyalty|loyalty=], user
-agents should take care that, when sharing data that isn't needed to satisfy a user's immediate goals, such information sharing
-aligns with the user's intents and interests.</span>
+<span class="practicelab">In maintaining duties of [=duty of
+protection|protection=], [=duty of discretion|discretion=] and [=duty of
+loyalty|loyalty=], user agents should share data only when it either is needed
+to satisfy a user's immediate goals or aligns with the user's wishes and
+interests.</span>
 </div>
 
 Websites sometimes use data in ways that aren't needed for the user's immediate
