--- a/index.html
+++ b/index.html
@@ -1283,10 +1283,14 @@ privacy</a>).
   goals and preferences about use of data about them.</span>
 </div>
 
-Agents should aggressively <a href="#data-minimization">minimize</a> [=ancillary data=].
-To facilitate site
-understanding of user preferences, user agents can provide browser-configurable signals to directly
-communicate common user preferences (such as a [=global opt-out=]).
+Agents should aggressively <a href="#data-minimization">minimize</a> [=ancillary
+data=] and should avoid burdening the user with additional [=privacy labor=]
+when deciding what [=ancillary data=] to send. To that end, user agents may
+employ user research, solicitation of general preferences, and heuristics about
+sensitivity of data or trust in a particular context. To facilitate site
+understanding of user preferences, user agents can provide browser-configurable
+signals to directly communicate common user preferences (such as a [=global
+opt-out=]).
 
 <div class="practice">
   <span class="practicelab">Specifications that define functionality for telemetry and analytics
