--- a/index.html
+++ b/index.html
@@ -1248,17 +1248,17 @@ goals. These uses are known as <dfn data-lt="ancillary use">ancillary uses</dfn>
 and data that is primarily useful for [=ancillary uses=] is <dfn>ancillary data</dfn>.
 
 <aside class="example">
-  Some examples of ancillary data include data used for browser telemetry, site telemetry,
+  Some examples of [=ancillary data=] include data used for browser telemetry, site telemetry,
   performance measurements, and software updates.
 </aside>
 
-Different users will want to share different kinds and amounts of ancillary data
-with websites, including possibly no ancillary data.
+Different users will want to share different kinds and amounts of [=ancillary data=]
+with websites, including possibly no [=ancillary data=].
 
 Aggregation or [=de-identified|de-identification=] of data may make users
-interested in sharing ancillary data in cases were the user was
+interested in sharing [=ancillary data=] in cases were the user was
 otherwise not interested. These techniques may be especially useful and important
-when ancillary data contributes to a collective benefit in a way
+when [=ancillary data=] contributes to a collective benefit in a way
 that reduces privacy threats to individuals (see <a href="#principle-collective-privacy">collective
 privacy</a>).
 
