--- a/index.html
+++ b/index.html
@@ -1220,53 +1220,38 @@ the data exposed, is to autogenerate a new email address for each context.
   uses</a> for ongoing discussion and iteration on this principle.
 </aside>
 
-In maintaining duties of [=duty of protection|protection=], [=duty of discretion|discretion=] and [=duty of loyalty|loyalty=], user
-agents should be conservative when sharing data that isn't needed to satisfy a user's immediate goals.
+<div class="practice">
+<span class="practicelab">In maintaining duties of [=duty of
+protection|protection=], [=duty of discretion|discretion=] and [=duty of
+loyalty|loyalty=], user agents should share data only when it either is needed
+to satisfy a user's immediate goals or aligns with the user's wishes and
+interests.</span>
+</div>
 
-On the Web, user agents and sites often communicate data outside what is needed to load and display a
-page. These <dfn data-lt="ancillary use">ancillary uses</dfn> include:
+Websites sometimes use data in ways that aren't needed for the user's immediate
+goals. These uses are known as <dfn data-lt="ancillary use">ancillary uses</dfn>,
+and data that is primarily useful for [=ancillary uses=] is <dfn>ancillary data</dfn>.
 
-* browser telemetry, including:
-  * performance measurements,
-  * measuring feature usage,
-  * debugging site, browser and networking issues, and
-  * detecting security problems or attacks;
-* site telemetry, including:
-  * performance measurements,
-  * analytics about usage and visitors,
-  * debugging site issues, and
-  * detecting security problems or attacks;
-* advertising and social media sharing, including:
-  * measurement,
-  * targeting,
-  * operating ad auctions,
-  * personalization, and
-  * fraud prevention;
-* performance, including caching and prefetching content; or
-* software updates.
+<aside class="example">
+  Some examples of [=ancillary data=] include data used for browser telemetry, site telemetry,
+  performance measurements, and software updates.
+</aside>
 
-<dfn>Telemetry and analytics</dfn>, including browser telemetry and site telemetry, are a common
-cluster of ancillary uses.
+Different users will want to share different kinds and amounts of [=ancillary data=]
+with websites, including possibly no [=ancillary data=].
 
-In some cases, mechanisms for sharing data are provided in order to minimize some other data
-collection mechanism identified as more intrusive or costly.
-
-Different users will want to share different kinds and amounts of data with websites. For some uses,
-some people would reasonably anticipate sharing such data or identify that use as a
-commonly-accepted contextual norm and some people would be willing to participate (for example,
-might have explicitly decided to contribute if they had the time and understanding to consider
-details about such a use) and some people would identify those uses as supporting their own goals.
-
-Aggregated or [=de-identified=] data is often more likely to be
-acceptable in these senses and often still contributes to the collective benefit while minimizing
-privacy threats to a particular individual (see <a href="#principle-collective-privacy">collective
-privacy</a>). But some people might object anyway, in particular instances or in general.
+Aggregation or [=de-identified|de-identification=] of data may make users
+interested in sharing [=ancillary data=] in cases were the user was
+otherwise not interested. These techniques may be especially useful and important
+when [=ancillary data=] contributes to a collective benefit in a way
+that reduces privacy threats to individuals (see <a href="#principle-collective-privacy">collective
+privacy</a>).
 
 <aside class="example">
   Privacy-preserving measurement techniques may be used for aggregate calculations while minimizing
   the number of actors that have access to personal data about many individual people. Encryption and
-  privacy-preserving proxies may be used to minimize the number of actors that have access to personal data or
-  to hide the contents of personal data used for telemetry or other kinds of measurement. But even
+  privacy-preserving proxies may minimize the number of actors that have access to personal data or
+  hide the contents of personal data. But even
   with those protections, some people may prefer not to participate in some kinds of measurement.
 
   Ongoing work on privacy-preserving technologies in the <abbr title="Internet Engineering Task
@@ -1283,16 +1268,18 @@ privacy</a>). But some people might object anyway, in particular instances or in
   goals and preferences about use of data about them.</span>
 </div>
 
-Agents should be careful, cautious, and conservative in applying data minimization to any
-[=ancillary use=], but also not burden the user with additional [=privacy
-labor=]. To that end, user agents may employ user research, solicitation of general preferences, and
-heuristics about sensitivity of data or trust in a particular context. To facilitate site
-understanding of user preferences, user agents can provide browser-configurable signals to directly
-communicate common user preferences (such as a [=global opt-out=]).
+Agents should aggressively <a href="#data-minimization">minimize</a> [=ancillary
+data=] and should avoid burdening the user with additional [=privacy labor=]
+when deciding what [=ancillary data=] to send. To that end, user agents may
+employ user research, solicitation of general preferences, and heuristics about
+sensitivity of data or trust in a particular context. To facilitate site
+understanding of user preferences, user agents can provide browser-configurable
+signals to directly communicate common user preferences (such as a [=global
+opt-out=]).
 
 <div class="practice">
   <span class="practicelab">Specifications that define functionality for telemetry and analytics
-  should explicitly note the [=telemetry and analytics|analytics=] use to facilitate modal or general user
+  should explicitly note the telemetry and analytics use to facilitate modal or general user
   choices.</span>
 </div>
 
@@ -1304,12 +1291,7 @@ communicate common user preferences (such as a [=global opt-out=]).
   telemetry and reporting APIs based on the user's choice.
 </aside>
 
-<aside class="example">
-  A user visits a mapping website that they use regularly and clicks a locator icon; although
-  precise geolocation can be very sensitive, the user agent can readily determine the user's intent.
-</aside>
-
-Data exposed for [=ancillary uses=] including [=telemetry and analytics|telemetry=] may
+Data exposed for [=ancillary uses=] including telemetry and analytics may
 often reveal characteristics of user configuration, device, environment, or behavior that could be
 used as part of <a>browser fingerprinting</a> to identify users across sites. Revealing user
 preferences or other heuristics in providing or disabling functionality could also contribute to a
