--- a/index.html
+++ b/index.html
@@ -1265,9 +1265,7 @@ privacy</a>).
 
 [=User agents=] should aggressively <a href="#data-minimization">minimize</a> [=ancillary
 data=] and should avoid burdening the user with additional [=privacy labor=]
-when deciding what [=ancillary data=] to expose. To that end, user agents may
-employ user research, solicitation of general preferences, and heuristics about
-sensitivity of data or trust in a particular context. To facilitate site
+when deciding what [=ancillary data=] to expose. To facilitate site
 understanding of user preferences, user agents can provide browser-configurable
 signals to directly communicate common user preferences (such as a [=global
 opt-out=]).
