Remove an issue block referring to closed issue #150.
SHA: 3ce4a2bb6bece63fc2d6c09ef7d40df57557a1bf
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1482,13 +1482,6 @@ the data exposed, is to autogenerate a new email address for each context.</p>
 </aside>
 
 <section id="ancillary-uses"><div class="header-wrapper"><h4 id="x2-2-1-ancillary-uses"><bdi class="secno">2.2.1 </bdi>Ancillary uses</h4><a class="self-link" href="#ancillary-uses" aria-label="Permalink for Section 2.2.1"></a></div>
-<div class="issue" id="issue-container-number-1"><div role="heading" class="issue-title marker" id="h-issue" aria-level="2"><span>Issue 1</span></div><aside class="">
-
-
-<p>  See <a href="https://github.com/w3ctag/privacy-principles/issues/150">the issue on ancillary
-  uses</a> for ongoing discussion and iteration on this principle.</p>
-</aside></div>
-
 <div class="practice principle"><a class="marker self-link" href="#bp-in-maintaining-duties-of-protection-discretion-and-loyalty-user-agents-should-share-data-only-when-it-either-is-needed-to-satisfy-a-user-s-immediate-goals-or-aligns-with-the-user-s-wishes-and-interests"><bdi lang="en">Principle</bdi></a>: <span class="practicelab" id="bp-in-maintaining-duties-of-protection-discretion-and-loyalty-user-agents-should-share-data-only-when-it-either-is-needed-to-satisfy-a-user-s-immediate-goals-or-aligns-with-the-user-s-wishes-and-interests">In maintaining duties of <a data-link-type="dfn" data-lt="duty of protection" href="#dfn-duty-of-protection" class="internalDFN" id="ref-for-dfn-duty-of-protection-1">protection</a>, <a data-link-type="dfn" data-lt="duty of discretion" href="#dfn-duty-of-discretion" class="internalDFN" id="ref-for-dfn-duty-of-discretion-1">discretion</a> and <a data-link-type="dfn" data-lt="duty of loyalty" href="#dfn-duty-of-loyalty" class="internalDFN" id="ref-for-dfn-duty-of-loyalty-1">loyalty</a>, user agents should share data only when it either is needed
 to satisfy a user's immediate goals or aligns with the user's wishes and
 interests.</span>
@@ -1917,7 +1910,7 @@ especially children, but not be reasonable for other sorts, like friends or inti
 those cases, the <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-37">user agent</a> can explain what the administrator is going to learn in a way that
 also says what sort of user is expected to agree. Users in other classes can then react
 appropriately.</p>
-<div class="issue" id="issue-container-number-2"><div role="heading" class="issue-title marker" id="h-issue-0" aria-level="2"><span>Issue 2</span></div><aside class="">
+<div class="issue" id="issue-container-number-1"><div role="heading" class="issue-title marker" id="h-issue" aria-level="2"><span>Issue 1</span></div><aside class="">
 
 
 <p>Link this to <a href="#guardians" data-matched-text="[[[#guardians]]]" class="sec-ref"><bdi class="secno">2.11.1 </bdi>Guardians</a>.</p>
@@ -2008,7 +2001,7 @@ information, or public information about misbehaving <a data-link-type="dfn" hre
 sharing of <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-10">information</a> for safety purposes should be limited and placed under collective
 governance.</li>
 </ul>
-</section><section id="vulnerability-0"><div class="header-wrapper"><h3 id="vulnerability"><bdi class="secno">2.11 </bdi>Vulnerability</h3><a class="self-link" href="#vulnerability" aria-label="Permalink for Section 2.11"></a></div><div class="issue" id="issue-container-number-3"><div role="heading" class="issue-title marker" id="h-issue-1" aria-level="2"><span>Issue 3</span></div><div class="">
+</section><section id="vulnerability-0"><div class="header-wrapper"><h3 id="vulnerability"><bdi class="secno">2.11 </bdi>Vulnerability</h3><a class="self-link" href="#vulnerability" aria-label="Permalink for Section 2.11"></a></div><div class="issue" id="issue-container-number-2"><div role="heading" class="issue-title marker" id="h-issue-0" aria-level="2"><span>Issue 2</span></div><div class="">
 
 <p>This section is still being refined. We expect additional principles to be added.</p>
 </div></div>
@@ -2087,7 +2080,7 @@ block or inform the parent when the child visits web pages about LGBT-related su
 <a data-link-type="dfn" href="#dfn-guardian" class="internalDFN" id="ref-for-dfn-guardian-12">guardian</a> for access to the help they need.</p>
 </aside>
 
-<div class="issue" id="issue-container-number-4"><div role="heading" class="issue-title marker" id="h-issue-2" aria-level="2"><span>Issue 4</span></div><aside class="">
+<div class="issue" id="issue-container-number-3"><div role="heading" class="issue-title marker" id="h-issue-1" aria-level="2"><span>Issue 3</span></div><aside class="">
 
 <p>Add crosslinks to <a href="#device-administrators" data-matched-text="[[[#device-administrators]]]" class="sec-ref"><bdi class="secno">2.8 </bdi>Device Owners and Administrators</a>.</p>
 </aside></div>
@@ -2134,7 +2127,7 @@ people's expectations for how data is processed.</p>
 </div>
 
 
-</section><section id="notifications-and-interruptions"><div class="header-wrapper"><h3 id="interruptions"><bdi class="secno">2.13 </bdi>Notifications and Interruptions</h3><a class="self-link" href="#interruptions" aria-label="Permalink for Section 2.13"></a></div><div class="issue" id="issue-container-number-5"><div role="heading" class="issue-title marker" id="h-issue-3" aria-level="2"><span>Issue 5</span></div><aside class="">
+</section><section id="notifications-and-interruptions"><div class="header-wrapper"><h3 id="interruptions"><bdi class="secno">2.13 </bdi>Notifications and Interruptions</h3><a class="self-link" href="#interruptions" aria-label="Permalink for Section 2.13"></a></div><div class="issue" id="issue-container-number-4"><div role="heading" class="issue-title marker" id="h-issue-2" aria-level="2"><span>Issue 4</span></div><aside class="">
 
 <p>This is related to <a data-link-type="dfn" href="#dfn-autonomous" class="internalDFN" id="ref-for-dfn-autonomous-14">autonomy</a>.</p>
 </aside></div>
@@ -2182,7 +2175,7 @@ carrying out some given set of data processing that is not essential to the serv
 allowed to do so without the <a data-link-type="dfn" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-35">actor</a> retaliating, for instance by artificially removing an
 unrelated feature, by decreasing the quality of the service, or by trying to cajole, badger, or
 trick the <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-90">person</a> into opting back into the <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-29">processing</a>.</p>
-<div class="issue" id="issue-container-number-6"><div role="heading" class="issue-title marker" id="h-issue-4" aria-level="2"><span>Issue 6</span></div><aside class="">
+<div class="issue" id="issue-container-number-5"><div role="heading" class="issue-title marker" id="h-issue-3" aria-level="2"><span>Issue 5</span></div><aside class="">
 
 <p>Some services have the user pay for their use in data. These services aren't necessarily retaliating by denying their services to users who refuse to pay with data, but the details are more complex than we've had time to write.</p>
 </aside></div>
@@ -2269,7 +2262,7 @@ how data collected with
 the UI element is used, and a reasonable person with a realistic cognitive budget would realize
 that this other <a data-link-type="dfn" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-43">actor</a> has this control, this other
 <a data-link-type="dfn" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-44">actor</a> is the <a data-link-type="dfn" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-5">first party</a> for the interaction instead.</p>
-<div class="issue" id="issue-container-number-7"><div role="heading" class="issue-title marker" id="h-issue-5" aria-level="3"><span>Issue 7</span></div><aside class="">
+<div class="issue" id="issue-container-number-6"><div role="heading" class="issue-title marker" id="h-issue-4" aria-level="3"><span>Issue 6</span></div><aside class="">
 
 
 <p>  The group believes that the definition of <a data-link-type="dfn" href="#dfn-first-party-0" class="internalDFN" id="ref-for-dfn-first-party-0-6">first party</a> provided above needs further refinement.
@@ -2521,7 +2514,7 @@ Tess O'Connor, and
 Wendy Seltzer.</p>
 </section>
 
-<section class="appendix" id="issue-summary"><div class="header-wrapper"><h2 id="e-issue-summary"><bdi class="secno">E. </bdi>Issue summary</h2><a class="self-link" href="#issue-summary" aria-label="Permalink for Appendix E."></a></div><ul><li><a href="#issue-container-number-1">Issue 1</a></li><li><a href="#issue-container-number-2">Issue 2</a></li><li><a href="#issue-container-number-3">Issue 3</a></li><li><a href="#issue-container-number-4">Issue 4</a></li><li><a href="#issue-container-number-5">Issue 5</a></li><li><a href="#issue-container-number-6">Issue 6</a></li><li><a href="#issue-container-number-7">Issue 7</a></li></ul></section><section id="references" class="appendix"><div class="header-wrapper"><h2 id="f-references"><bdi class="secno">F. </bdi>References</h2><a class="self-link" href="#references" aria-label="Permalink for Appendix F."></a></div><section id="informative-references"><div class="header-wrapper"><h3 id="f-1-informative-references"><bdi class="secno">F.1 </bdi>Informative references</h3><a class="self-link" href="#informative-references" aria-label="Permalink for Appendix F.1"></a></div>
+<section class="appendix" id="issue-summary"><div class="header-wrapper"><h2 id="e-issue-summary"><bdi class="secno">E. </bdi>Issue summary</h2><a class="self-link" href="#issue-summary" aria-label="Permalink for Appendix E."></a></div><ul><li><a href="#issue-container-number-1">Issue 1</a></li><li><a href="#issue-container-number-2">Issue 2</a></li><li><a href="#issue-container-number-3">Issue 3</a></li><li><a href="#issue-container-number-4">Issue 4</a></li><li><a href="#issue-container-number-5">Issue 5</a></li><li><a href="#issue-container-number-6">Issue 6</a></li></ul></section><section id="references" class="appendix"><div class="header-wrapper"><h2 id="f-references"><bdi class="secno">F. </bdi>References</h2><a class="self-link" href="#references" aria-label="Permalink for Appendix F."></a></div><section id="informative-references"><div class="header-wrapper"><h3 id="f-1-informative-references"><bdi class="secno">F.1 </bdi>Informative references</h3><a class="self-link" href="#informative-references" aria-label="Permalink for Appendix F.1"></a></div>
     
     <dl class="bibliography"><dt id="bib-addressing-cyber-harassment">[Addressing-Cyber-Harassment]</dt><dd>
       <a href="https://scholarship.law.bu.edu/cgi/viewcontent.cgi?article=1634&amp;context=faculty_scholarship"><cite>Addressing cyber harassment: An overview of hate crimes in cyberspace</cite></a>. Danielle Keats Citron.  Case Western Reserve Journal of Law, Technology &amp; the Internet. 2015. URL: <a href="https://scholarship.law.bu.edu/cgi/viewcontent.cgi?article=1634&amp;context=faculty_scholarship">https://scholarship.law.bu.edu/cgi/viewcontent.cgi?article=1634&amp;context=faculty_scholarship</a>
