Mention harm from partially blocking cross-context recognition.

--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,12 @@ recognition|recognized=] across [=partitions=] unless they intend to be
 recognized. Note that sites can do harm even if they can't be completely certain
 that visits come from the same person, so [=user agents=] should also take steps
 to prevent such probabilistic recognition. The [[[Privacy-Threat]]] discusses
-the tradeoffs involved.
+the tradeoffs involved. Note that if a [=user agent=] blocks [=recognition=]
+between different sites but doesn't notice when a single site contains multiple
+[=contexts=], this can encourage [=actors=] to bundle multiple contexts into a
+single site and privilege the [=actors=] who can do so. These are both harmful,
+but that harm is likely less than the harm from allowing [=cross-site
+recognition=].
 
 If a [=user agent=] can tell that its user is using a particular identity on a
 website, for example because the user used an API like
