Remove some sarcasm about FIPs.

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ elaborated in the 1970s in support of individual [=autonomy=] in the face of gro
 decision-making. Since they offload the [=privacy labour=]
 to people and assume perfect, unlimited [=autonomy=], the [=FIPs=] do not forbid specific
 types of [=data processing=] but only place them under different procedural requirements.
-Such an approach is [=appropriate=] for [=actors=] that are processing data in the 1970s.
+This approach is no longer appropriate.
 
 One notable issue with procedural, self-governing approaches to privacy is that they tend to have the same
 requirements in situations where people find themselves in a significant asymmetry of
