Start making the opt in/out section consistently talk about purposes.
And avoid calling some purposes more sensitive than others.

--- a/index.html
+++ b/index.html
@@ -649,10 +649,13 @@ however, they are used as a way to avoid putting in the difficult work of decidi
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
 to the people using a system.
 
-In specific cases, [=people=] should be able to [=consent=] to more
-sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
-their reading history shared with a company. The burden of proof on ensuring that informed
-[=consent=] has been obtained needs to be very high in this case.
+[=People=] should be able to [=consent=] to specific [=purposes=] that would
+otherwise be restricted, such as logging into one site with an identity from a
+different one, or using their reading history to target ads. [=Actors=] need to
+take care that their users are *informed* when granting this [=consent=] and
+*aware* enough about what's going on that they can know to revoke their consent
+when they want to.
+
 [=Consent=] is comparable to the general problem of permissions on the Web
 platform. Both consent and permissions should be requested in a way that lets
 people delay or avoid answering if they're trying to do something else. If
