These concentrations of power have precedents.

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ will have to work together to strike the right balance.
 Information is power. It can be used to predict and to influence people, as well as to design online
 spaces that control people's behaviour. The collection and [=processing=] of information in greater
 volume, with greater precision and reliability, with increasing interoperability across a growing
-variety of data types, and at intensifying speed is leading to an unprecedented concentration of power
+variety of data types, and at intensifying speed is leading to a concentration of power
 that threatens private and public liberties. What's more, automation and the increasing computerisation
 of all aspects of our lives both increase the power of information and decrease the cost of a number of intrusive
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
