Remove the statement about a general opt-out overriding a specific opt-in.

--- a/index.html
+++ b/index.html
@@ -672,11 +672,7 @@ Conceptually, a [=global opt-out=] mechanism is an automaton operating as part o
 [=person=] has with a site, or more generally conveys an expression of the [=person=]'s
 rights in a relevant jurisdiction. (For instance, the [=person=] may be objecting to [=processing=]
 based on legitimate interest, withdrawing [=consent=] to specific [=purposes=], or requesting that
-their data not be sold or shared.) It should be noted that, since a
-[=global opt-out=] signal is reaffirmed automatically with every interaction, it will take precedence
-in terms of specificity over any general obtention of [=consent=] by a site,
-and only superseded by specific [=consent=] obtained through a deliberate action taken by
-the user with the intent of overriding their global opt-out.
+their data not be sold or shared.)
 
 ### Privacy Labour {#privacy-labour}
 
