processing is sensitive, not purposes

--- a/index.html
+++ b/index.html
@@ -635,9 +635,13 @@ types of [=processing=] are [=appropriate=] and which are not, offloading [=priv
 to the people using a system.
 
 In specific cases, [=people=] should be able to [=consent=] to more
-sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
-their reading history shared with a company. The burden of proof on ensuring that informed
-[=consent=] has been obtained needs to be very high in this case.
+sensitive [=processing=], such as having their [=identity=] recognised across contexts or
+their reading history shared with a company. [=Actors=] need to
+take care that their users are *informed* when granting this [=consent=] and
+*aware* enough about what's going on that they can know to revoke their consent
+when they want to. They should also ensure that they assess the risk of what *could* be done
+with the data they are collecting or sharing, not just what the stated purpose of that collection
+or sharing is.
 [=Consent=] is comparable to the
 general problem of permissions on the Web platform. In the same way that it should be clear when a
 given device capability is in use (eg. you are providing geolocation or camera access), sharing
