make it clear that this is a general statement, not about the GDPR

--- a/index.html
+++ b/index.html
@@ -657,10 +657,10 @@ Conceptually, a [=global opt-out=] mechanism is an automaton operating as part o
 [=user agent=], which is to say that it is equivalent to a robot that would carry out a
 [=person=]'s bidding by pressing an [=opt-out=] button with every interaction that the
 [=person=] has with a site, or more generally conveys an expression of the [=person=]'s
-rights in a relevant jurisdiction. (For instance, under the [[?GDPR]], the [=person=] may be
-conveying objections to [=processing=] based on legitimate interest or the withdrawal of
-[=consent=] to specific [=purposes=].) It should be noted that, since a [=global opt-out=]
-signal is reaffirmed automatically with every interaction, it will take precedence
+rights in a relevant jurisdiction. (For instance, under data protection regimes based on legitimate
+interest or consent, the [=person=] may be conveying objections to [=processing=] based on legitimate
+interest or the withdrawal of [=consent=] to specific [=purposes=].) It should be noted that, since a
+[=global opt-out=] signal is reaffirmed automatically with every interaction, it will take precedence
 in terms of specificity over any general obtention of [=consent=] by a site,
 and only superseded by specific [=consent=] obtained through a deliberate action taken by
 the user with the intent of overriding their global opt-out.
