Replace the reference for "fiduciary".

--- a/index.html
+++ b/index.html
@@ -164,10 +164,12 @@
           authors: ['European Commission'],
           href: 'https://ec.europa.eu/COMMFrontOffice/publicopinion/index.cfm/Survey/getSurveyDetail/instruments/FLASH/surveyKy/2124',
         },
-        'Fiduciary-UA': {
-          title: 'The Fiduciary Duties of User Agents',
-          href: 'https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3827421',
-          authors: ['Robin Berjon'],
+        'Fiduciary-Model': {
+          title: 'The Fiduciary Model of Privacy',
+          href: 'https://ssrn.com/abstract=3700087',
+          authors: ['Jack M. Balkin'],
+          date: '26 September 2020',
+          publisher: 'Harvard Law Review Forum'
         },
         'FIP': {
           title: 'Fair Information Practices: A Basic History',
@@ -847,8 +849,8 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
 </dl>
 
 These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
-research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
-[[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary."
+research, this relationship with a [=trustworthy agent=] has been described as "fiduciary"
+[[?Fiduciary-Model]]. Some jurisdictions may have a distinct legal meaning for "fiduciary."
 
 Many of the [=principles=] described in the rest of this document extend the [=user agent=]'s duties and
 make them more precise.
