--- a/index.html
+++ b/index.html
@@ -706,11 +706,11 @@ of [=privacy=] in a given context can be
 contested ([[?Privacy-Contested]]). This makes privacy a problem of collective action ([[?GKC-Privacy]]).
 Group-level [=data processing=] may impact populations or individuals, including in
 ways that [=people=] could not control even under the optimistic assumptions of [=consent=].
-For example, based on group-level analysis, a company may know that <var>site.example</var>
-is predominantly visited by [=people=] of a given race or gender, and decide not to run its
-job ads there. Visitors to that page are implicitly having their [=data=] processed in
-[=inappropriate=] ways, with no way to discover the discrimination or seek relief
-([[?Relational-Governance]]).
+For example, based on group-level analysis, a company may know that <var>Niche
+Magazine</var> or <var>site.example</var> is predominantly read by [=people=]
+of a given race or gender, and decide not to run its job ads there. Readers of
+those publications are implicitly having their [=data=] processed in
+[=inappropriate=] ways ([[?Relational-Governance]]).
 
 What we consider is therefore not just the relation between the [=people=] who share data
 and the [=actors=] that invite that sharing ([[?Relational-Turn]]), but also between the [=people=]
@@ -720,9 +720,11 @@ more, such categorisation of people, voluntary or not, changes the way in which 
 This can produce self-reinforcing loops that can damage both individuals and
 groups ([[?Seeing-Like-A-State]]).
 
-In general, collective issues in [=data=] require collective solutions. Web standards help with
-[=data governance=] by defining structural controls
-in [=user agents=] and establishing or delegating to institutions that can handle issues of [=privacy=].
+In general, collective issues in [=data=] require collective solutions.
+Web standards help with [=data governance=] by
+defining structural controls in [=user agents=],
+ensuring that researchers and regulators can discover group-level abuse,
+and establishing or delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
 increasing <em>individual</em> control instead of by collective action.
 
