--- a/index.html
+++ b/index.html
@@ -164,6 +164,20 @@
           authors: ['European Commission'],
           href: 'https://ec.europa.eu/COMMFrontOffice/publicopinion/index.cfm/Survey/getSurveyDetail/instruments/FLASH/surveyKy/2124',
         },
+        'Fiduciary-Law': {
+          title: 'Fiduciary Law',
+          href: 'http://www.bu.edu/lawlibrary/facultypublications/PDFs/Frankel/Fiduciary%20Law.pdf',
+          authors: ['Tamar Frankel'],
+          date: 'May 1983',
+          publisher: 'California Law Review',
+        },
+        'Fiduciary-Model': {
+          title: 'The Fiduciary Model of Privacy',
+          href: 'https://ssrn.com/abstract=3700087',
+          authors: ['Jack M. Balkin'],
+          date: '26 September 2020',
+          publisher: 'Harvard Law Review Forum',
+        },
         'Fiduciary-UA': {
           title: 'The Fiduciary Duties of User Agents',
           href: 'https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3827421',
@@ -848,7 +862,9 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
 
 These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
 research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
-[[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary."
+([[?Fiduciary-Law]], [[?Fiduciary-Model]], [[?Taking-Trust-Seriously]];
+see [[?Fiduciary-UA]] for a longer informal discussion). Some jurisdictions may have a distinct
+legal meaning for "fiduciary." ([[?Fiduciary-Law]])
 
 Many of the [=principles=] described in the rest of this document extend the [=user agent=]'s duties and
 make them more precise.
