Remove the sentence about legitimacy.

--- a/index.html
+++ b/index.html
@@ -894,9 +894,7 @@ This is a special case of the more general principle that data should not be use
 [=purposes=] than the data's subjects understood it was being collected for.
 
 Services sometimes use people's data in order to protect those or other people.
-This is legitimate as long as the extra risk created by the data collection is
-less than the protection it offers and the extra risk isn't concentrated on
-[=vulnerable people=]. A service that does this should explain what data it's
+A service that does this should explain what data it's
 using for this purpose. It should also say how it might use or share a person's
 data if it believes that person has broken the rules.
 
