Try to improve the wording around consent indicators. (#246)

--- a/index.html
+++ b/index.html
@@ -652,14 +652,13 @@ In specific cases, [=people=] should be able to [=consent=] to more
 sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
 their reading history shared with a company. The burden of proof on ensuring that informed
 [=consent=] has been obtained needs to be very high in this case.
-[=Consent=] is comparable to the
-general problem of permissions on the Web platform. In the same way that it should be clear when a
-given device capability is in use (eg. you are providing geolocation or camera access), sharing
-data should be set up in such a way that it requires deliberate, specific action from the [=person=]
-(eg. triggering a form control that is not on a modal dialog) and if that [=consent=] is persistent,
-there should be a vivid indicator that data is being transmitted shown at all times, in such a way
-that the person can easily switch it off. In general, providing [=consent=] should be rare,
-highly intentional, and temporary.
+[=Consent=] is comparable to the general problem of permissions on the Web
+platform. Both consent and permissions should be requested in a way that lets
+people delay or avoid answering if they're trying to do something else. If
+either results in persistent data access, there should be an indicator that lets
+people notice and that lets them turn off the access if it has lasted longer
+than they want. In general, providing [=consent=] should be rare, intentional,
+and temporary.
 
 When an [=opt-out=] mechanism exists, it should preferably be complemented by a
 <dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
