--- a/index.html
+++ b/index.html
@@ -2258,7 +2258,7 @@ the <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-f
 <p>Sites should include deception in their threat modeling and not assume that Web platform APIs
 provide any guarantees of consistency, currency, or correctness about the user. People often have
 control of the devices and software they use to interact with web sites. In response to site
-requests, people may people may arbitrarily modify or select the information they provide for a
+requests, people may arbitrarily modify or select the information they provide for a
 variety of reasons, including both malice and self-protection.</p>
 <p>In any rare instances when an API must be defined as returning true current values, users may still
 configure their agents to respond with other information, for reasons including testing, auditing or
