Remove a duplicate "that information".

--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@ information into three categories:
     removing access to. For example:
 
     * Some users are disappointed that the page they're visiting can discover which link
-        they clicked to leave that page. We can't block that information that information
+        they clicked to leave that page. We can't block that information
         because the page can use <a data-cite="RFC9110#status.3xx">HTTP redirects</a> to
         learn it, and redirection is a core feature of the web.
     * Some users are disappointed that a page with permission to run Javascript can record
