Fix the spelling of "where".

--- a/index.html
+++ b/index.html
@@ -1260,7 +1260,7 @@ Different users will want to share different kinds and amounts of [=ancillary da
 with websites, including possibly no [=ancillary data=].
 
 Aggregation or [=de-identified|de-identification=] of data may make users
-interested in sharing [=ancillary data=] in cases were the user was
+interested in sharing [=ancillary data=] in cases where the user was
 otherwise not interested. These techniques may be especially useful and important
 when [=ancillary data=] contributes to a collective benefit in a way
 that reduces privacy threats to individuals (see <a href="#principle-collective-privacy">collective
