Fix the spelling of "where".
SHA: 4e4732c3b7158f014ef21e85475b6c0bffe00c2c
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@ and data that is primarily useful for <a data-link-type="dfn" href="#dfn-ancilla
 <p>Different users will want to share different kinds and amounts of <a data-link-type="dfn" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-2">ancillary data</a>
 with websites, including possibly no <a data-link-type="dfn" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-3">ancillary data</a>.</p>
 <p>Aggregation or <a data-link-type="dfn" data-lt="de-identified" href="#dfn-de-identified" class="internalDFN" id="ref-for-dfn-de-identified-3">de-identification</a> of data may make users
-interested in sharing <a data-link-type="dfn" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-4">ancillary data</a> in cases were the user was
+interested in sharing <a data-link-type="dfn" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-4">ancillary data</a> in cases where the user was
 otherwise not interested. These techniques may be especially useful and important
 when <a data-link-type="dfn" href="#dfn-ancillary-data" class="internalDFN" id="ref-for-dfn-ancillary-data-5">ancillary data</a> contributes to a collective benefit in a way
 that reduces privacy threats to individuals (see <a href="#principle-collective-privacy">collective
