Add link to 'site' definition

--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ that reveal their vulnerability. For example, if you meet your therapist at a
 party, you expect them to have different discussion topics with you than they
 usually would, and possibly even to pretend they don't know you.
 
-<dfn>Cross-site recognition</dfn> is when a site determines with high
+<dfn>Cross-site recognition</dfn> is when a [=site=] determines with high
 probability that a visit to the site comes from the same person as another
 visit to a *different* site. In the usual case that the sites are different [=contexts=],
 [=cross-site recognition=] is a privacy harm in the same cases as [=cross-context recognition=].
