Add Chris to acks

--- a/index.html
+++ b/index.html
@@ -2304,6 +2304,7 @@ Some of the definitions in this document build on top of the work in
 The following people, in alphabetical order of their first name, were instrumental
 in producing this document:
 Amy Guy,
+Chris Needham,
 Christine Runnegar,
 Dan Appelquist,
 Don Marti,
