--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ particular situation. Note that people's privacy can also be in tension
 with non-privacy concerns. As discussed in the [[[Ethical-Web]]], "it is important to
 consider the context in which a particular technology is being applied, the expected
 audience(s) for the technology, who the technology benefits and who it may disadvantage,
-and any power dynamics involved". Despite this complexity, there is a basic ground
+and any power dynamics involved" ([[Ethical-Web]]). Despite this complexity, there is a basic ground
 rule to follow:
 
 <div class="practice">
@@ -1121,7 +1121,7 @@ recognized. Note that:
 * Sites can do harm even if they can't be completely certain
   that visits come from the same person, so [=user agents=] should also take steps
   to prevent such probabilistic recognition. The [[[Privacy-Threat]]] discusses
-  the tradeoffs involved.
+  the tradeoffs involved. ([[Privacy-Threat]])
 * If a [=user agent=] blocks [=recognition=] between different sites but doesn't
   notice when a single site contains multiple [=contexts=], this can encourage
   [=actors=] to bundle multiple contexts into a single site and privilege the
