Use consistent language around violating norms.
Instead of "breaking rules" in one place and "violating norms" in
another.

--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@ This is a special case of the more general principle that data should not be use
 Services sometimes use people's data in order to protect those or other people.
 A service that does this should explain what data it's
 using for this purpose. It should also say how it might use or share a person's
-data if it believes that person has broken the rules.
+data if it believes that person has violated the service's norms.
 
 </div>
 
