Take chrisn's change about the "whole web's architecture"

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ this document doesn't address how to balance the different ethical web principle
 Privacy on the Web is primarily regulated by two forces: the architectural capabilities that the Web
 platform exposes (or does not), and laws in the various jurisdictions where the Web is used
 ([[New-Chicago-School]]). These regulatory mechanisms are separate; a law in one country does not
-(and should not) change the whole Web's architecture, and likewise Web specifications cannot
+(and should not) change the architecture of the whole Web, and likewise Web specifications cannot
 override any given law (although they can affect how easy it is to create and enforce law). The Web
 is not merely an implementation of a particular legal privacy regime; it has distinct features and
 guarantees driven by shared values that often exceed legal requirements for privacy.
