Designers aren't an audience; use spec authors instead.

--- a/index.html
+++ b/index.html
@@ -526,7 +526,9 @@ cycle of a new Web standard or feature, or in the development of Web products.  
 add special cases later to address unforeseen but predictable issues or
 to build systems that turn out to be unacceptable to users.
 
-Because this document guides privacy reviews of new standards, designers should consult it early in the design to make sure their feature passes the review smoothly.
+Because this document guides privacy reviews of new standards, authors of web
+specifications should consult it early in the design to make sure their feature
+passes the review smoothly.
 
 </section>
 
