Switch from norms to rules in the "Incorporating" section.

--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@ This is a special case of the more general principle that data should not be use
 Services sometimes use people's data in order to protect those or other people.
 A service that does this should explain what data it's
 using for this purpose. It should also say how it might use or share a person's
-data if it believes that person has violated the service's norms.
+data if it believes that person has violated the service's rules.
 
 </div>
 
@@ -928,14 +928,14 @@ A site might segregate the data it collects for safety reasons from its business
 
 </aside>
 
-It is attractive to say that if someone violates the norms of a service they're using,
+It is attractive to say that if someone violates the rules of a service they're using,
 then they sacrifice a proportionate amount of their privacy protections, but
 
-1. Often the service can only prevent the norm violation by also collecting data from
+1. Often the service can only prevent the rule violation by also collecting data from
    innocent users. This extra collection is not always [=appropriate=], especially if it
    allows pervasive monitoring ([[RFC7258]], [[RFC7687]]).
 1. If a service operator wants to collect some extra data, it can be tempting for them to
-   define norms and proportionality that allow them to do so.
+   define rules and proportionality that allow them to do so.
 
 The following examples illustrate some of the tensions:
 
